# WTHR-Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/include/: Application.hpp  InputManager.hpp  WindowManager.hpp  pch.hpp
Editor/src/: Application.cpp  WindowManager.cpp  main.cpp  pch.cpp
Physics/: CMakeLists.txt
Physics/include/: CallBacks.hpp  Collider.hpp  ColliderID.hpp  PhysicsWorld.hpp  RigidBody.hpp
Physics/src/: PhysicsWorld.cpp
Renderer/: CMakeLists.txt
Renderer/include/: Camera.hpp  Components.hpp  Framebuffer.hpp  GLContextWorker.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Scene.hpp  ScriptEditor.hpp  Shader.hpp  Texture.hpp
Renderer/shaders/: default.vert  picking.frag  picking.vert  simple_color.frag  simple_color.vert
Renderer/src/: Framebuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Scripts.cpp
Runtime/: CMakeLists.txt
Runtime/include/: Platform.hpp  RuntimeApp.hpp  Window.hpp
Runtime/src/: Platform.cpp  RuntimeApp.cpp  Window.cpp  main.cpp
WTHR/: CMakeLists.txt
WTHR/include/: Application.hpp  Camera.hpp  Components.hpp  Mesh.hpp  Model.hpp  PrimitiveShape.hpp  Renderer.hpp  Scene.hpp  Scripts.hpp  Shader.hpp  Timer.hpp  WTHR.hpp  WindowManager.hpp  pch.hpp
WTHR/src/: Application.cpp  InputManager.cpp  Renderer.cpp  Scene.cpp  ScriptEditor.cpp  Scripts.cpp  WindowManager.cpp  main.cpp
assets/scripts/: player_controller.lua
assets/shaders/: default.frag  picking.frag  picking.vert
